# paraphraser

./: LICENSE  README.md  pyproject.toml
rehash/: app.py  tree_proccesor.py  trees_responce.json
